workloads/keycloak/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`PLACEHOLDER`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
